...
  "baseNameForColorGradientLabel": "Nom de base pour la couleur/gradient",
  "bottomNavHome": "Accueil",
  "bottomNavJournals": "Journaux",
  "bottomNavNotes": "Notes",
  "build": "Build",
  "cancelButtonLabel": "Annuler",
...
  "copyPaletteFromJournalDropdownLabel": "Copier la palette d'un journal existant",
  "createFirstModelMessage": "Créez votre premier modèle personnel en appuyant sur le bouton \"+\" ci-dessus.",
  "createJournalButtonLabel": "Créer le journal",
  "createJournalPageTitle": "Créer un nouveau journal",
  "createNewJournalButton": "Créer un nouveau journal",
  "createNewJournalCardLabel": "Créer un nouveau journal",
...
  "developedWith": "Développé avec Flutter & Firebase.",
  "downloadForAndroidLink": "Télécharger pour Android",
  "edit": "Modifier",
  "editColorDialogTitle": "Modifier la couleur",
  "editModelTooltip": "Modifier le modèle",
...
  "editPaletteForJournalTooltip": "Modifier la palette pour {journalName}",
  "editPaletteTooltip": "Modifier la palette de '{journalName}'",
  "emailLabel": "Email",
  "emailValidationError": "Veuillez entrer une adresse email valide.",
  "emptyButtonLabel": "Vider",
...
  "entryPageAssociatedColorLabel": "Couleur associée",
  "entryPageContentHint": "Décrivez votre pensée, événement, ou tâche...",
  "entryPageContentLabel": "Contenu de la note...",
  "entryPageContentValidatorEmpty": "Veuillez entrer le contenu de la note.",
  "entryPageContentValidatorTooLong": "Le contenu est trop long (max 1024 caractères).",
...
  "journalNameExistsSnackbar": "Un journal nommé \"{journalName}\" existe déjà.",
  "journalNameTextFieldHint": "Ex: Journal de gratitude, Projets 2025...",
  "journalNameTextFieldLabel": "Choisissez un nom pour votre journal...",
  "journalNameTooLongValidator": "Le nom du journal est trop long (max 70).",
  "journalNameUpdatedSnackbar": "Nom du journal mis à jour.",
...
  "newPaletteDefaultName": "Nouvelle palette",
  "newPaletteModelCreatedLog": "Nouveau modèle de palette créé : {modelName}",
  "noAccountYetSignUp": "Pas encore de compte ? S'inscrire",
  "noActiveJournalMessage": "Sélectionnez un journal existant ou créez-en un nouveau pour commencer.",
  "noActiveJournalTitle": "Aucun journal actif.",
...
  "paletteSourceExistingJournalOption": "En copiant la palette d'un journal existant",
  "paletteSourceModelOption": "À partir d'un modèle de palette",
  "passwordLabel": "Mot de passe",
  "passwordValidationError": "Veuillez entrer votre mot de passe.",
  "pleaseChooseJournalValidator": "Veuillez choisir un journal",
  "pleaseChooseModelValidator": "Veuillez choisir un modèle",
  "predefinedModelsCannotBeDeletedSnackbar": "Les modèles prédéfinis ne peuvent pas être supprimés.",
  "registerPageAlreadyHaveAccountLink": "Déjà un compte ? Se connecter",
  "registerPageConfirmPasswordLabel": "Confirmer le mot de passe",
  "registerPageConfirmPasswordValidatorEmpty": "Veuillez confirmer votre mot de passe.",
  "registerPageConfirmPasswordValidatorMismatch": "Les mots de passe ne correspondent pas.",
...
  "registerPagePasswordValidatorUppercase": "Le mot de passe doit contenir au moins une lettre majuscule.",
  "registerPageSignUpButton": "S'inscrire et se connecter",
  "registerPageTitle": "Créer un compte",
  "reloadingInitialJournalMessage": "Rechargement du journal initial après la suppression du journal actif.",
  "save": "Enregistrer",
...
  "selectLanguage": "Sélectionner la langue",
  "settings": "Paramètres",
  "signInButton": "Se connecter",
  "signInEmailErrorLog": "Erreur de connexion par email : {errorDetails}",
  "signInGoogleErrorLog": "Erreur de connexion Google : {errorDetails}",
...
  "viewAsListTooltip": "Vue en liste",
  "welcomeGuest": "Bienvenue !",
  "welcomeUser": "Bienvenue, {userName} !",
  "yesDeleteAllButtonLabel": "OUI, TOUT SUPPRIMER",
  "yesDeleteAllNotesButtonLabel": "OUI, SUPPRIMER TOUTES LES NOTES",
...
  "cookieConsentSettings": "Paramètres",
  "privacyPolicy": "Politique de confidentialité",
  "newJournalMenuItem": "Nouveau journal",
  "editJournalNameTooltip": "Modifier le nom du journal",
  "existingNotesTitle": "Notes existantes",
...
  "sortByContentTooltip" : "Trier par contenu",

  "editJournalTitle": "Modifier le journal",
  "journalNameLabel": "Nom du journal",
  "journalNameValidator": "Veuillez entrer un nom de journal.",
...
